--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="page1" >
       <div class="word">
-        <span>Will you go on a milk and a pogo date with me?</span>
+        <span>There's something special about the time we spend together, and I'd love to take you out on a date and make it even more memorable. What do you think? Would you go on a date with me?</span>
       </div>
       <div class="container" id="container1">
         <img src="assets/erm-fingers.gif" alt="please" class="image-1" />
@@ -19,7 +19,7 @@
     </div>
     <div class="page2" >
       <div class="word">
-        <span>Kutti I am asking you again that will you go on a milk and a pogo date with me?</span>
+        <span>Kutti I am asking you again that would you go on a date with me?</span>
       </div>
       <div class="container" id="container2">
         <img src="assets/erm-fingers.gif" alt="please" class="image-1" />
@@ -29,7 +29,7 @@
     </div>
     <div class="page3" >
       <div class="word">
-        <span>Please will you go on a date with me? plzzzz</span>
+        <span>Please will you go on a date with me? plzzzz🥺🥺🥺🥺</span>
       </div>
       <div class="container" id="container">
         <img id="gif" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" alt="Cute animated illustration" class="image-1">
